fixed alignment problems in about section

--- a/style.css
+++ b/style.css
@@ -154,19 +154,34 @@ footer p {
   
   .about {
     display: flex;
-    flex-direction: row;
+    align-items: center;
   }
 
-  .about img {
-    flex-shrink: 0;
-    width: 35%;
-    padding: 8px;
+  .aboutitem {
+    display: flex;
+    justify-content: space-between;
+    max-width: 50%;
+    gap: 5px;
   }
 
-  .about p {
+  .aboutitem img {
+    max-width: 48%;
+    max-height: 100%;
+  }
+
+  .aboutcontent {
+    width: 100%;
+    display: flex;
+    align-items: center;
+  }
+
+  .aboutcontent p {
+    margin: 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    max-width: 100%;
+    padding-left: 20px;
 
   }
 
